--- a/assets/scss/ui-frontend.scss
+++ b/assets/scss/ui-frontend.scss
@@ -24,6 +24,10 @@ body {
     background: lightseagreen;
     color: white;
   }
+  .bye {
+    background: darkslateblue;
+    color: white;
+  }
 }
 
 .schedule--row {
